--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -10,6 +10,26 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
 
 @each $name in $color_names {
   $i: index($color_names, $name);
+
+  .#{$name}, .#{$name}-background {
+
+    .input__label--hoshi-color-1::after {
+    	border-color: nth($color_vars, $i);
+    }
+
+    .input__label--hoshi-color-2::after {
+    	border-color: nth($color_vars, $i);
+    }
+
+    .input__label--hoshi-color-3::after {
+    	border-color: nth($color_vars, $i);
+    }
+
+    .input__label {
+      color: nth($color_vars, $i);
+    }
+  }
+
   .#{$name} {
     color: nth($color_vars, $i);
 		background-color: white;
@@ -39,6 +59,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
 
     .right {
       border: 0.2em solid nth($color_vars, $i);
+      display: inline-block;
     }
 
     .right:after {
@@ -72,30 +93,37 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
       z-index: 5;
       display: inline-block;
 
-      &:hover {
-        background-color: rgba(255,255,255, 0.7);
+      &.hover {
+        &:hover {
+          background-color: rgba(255,255,255, 0.7);
+        }
       }
+
     }
+
 
     // HOVER
 
-    &:hover {
-      color: nth($color_vars, $i);
-  		background-color: white;
-
-      a {
+    &.hover {
+      &:hover {
         color: nth($color_vars, $i);
-      }
+        background-color: white;
 
-      .input__label {
-        color: $yellow-primary;
-      }
+        a {
+          color: nth($color_vars, $i);
+        }
+
+        .input__label {
+          color: $yellow-primary;
+        }
 
 
-      .cta-text {
-        right: 0px;
+        .cta-text {
+          right: 0px;
+        }
       }
     }
+
 	}
 }
 
@@ -279,7 +307,7 @@ section {
   margin-bottom: 10px;
 }
 
-.intro-text, .callout-text, .listing-text, .body-text-area, .icons-text {
+.intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
   padding: 50px;
   float: left;
 }
@@ -304,13 +332,12 @@ section {
 
 .focus {
   font-size: 24px;
-  color: $blue-primary;
 }
 
 .icon-box {
   width: 33.3%;
   float: left;
-  padding: 20px 60px;
+  padding: 20px 120px 20px 0;
 
   strong {
     font-family: $font-family--bold;
@@ -320,7 +347,7 @@ section {
 .schedule-box {
   width: 50%;
   float: left;
-  padding: 20px 60px;
+  padding: 20px 120px 20px 0;
 
   .strong {
     font-family: $font-family--bold;
@@ -328,4 +355,37 @@ section {
   .blue {
     color: $blue-secondary;
   }
+}
+
+.buttons h3, .form h3 {
+  margin-bottom: 0;
+}
+
+.buttons p, .form p {
+  margin-bottom: 15px;
+}
+
+.regular-font {
+  font-family: $font-family--regular;
+}
+
+.buttons-cta {
+  display: inline;
+  padding: 25px 80px 25px 25px;
+  text-transform: uppercase;
+  font-family: "Avenir Next Cyr W00 Bold";
+  margin-right: 20px;
+  position: relative;
+  float: left;
+}
+
+.submit-buttons {
+  display: inline;
+  padding: 10px 60px 10px 10px;
+  text-transform: uppercase;
+  font-family: "Avenir Next Cyr W00 Bold";
+  margin-right: 20px;
+  position: relative;
+  float: left;
+  margin-top: 30px;
 }
