--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -45,7 +45,9 @@ h3 {
 h4 {
 	font-size: 24px;
 	line-height: 28px;
-	font-family: $font-family--bold;
+	font-family: $font-family--regular;
+	letter-spacing: 0.04em;
+	margin-bottom: 25px;
 }
 
 h5 {
