--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -414,3 +414,23 @@ section {
     color: black;
   }
 }
+
+#content {
+  margin-top: 30px;
+  float: left;
+}
+
+.thumbnail {
+  float: left;
+  width: 100%;
+  display: block;
+  margin-bottom: 15px;
+}
+
+.single-post main {
+  border-top: 5px solid $yellow-primary;
+}
+
+.page-template-product main, .page-template-panel main {
+  border-top: 5px solid $blue-primary;
+}
