--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -1,3 +1,248 @@
 // ==========================================================================
 // Base Styles
 // ==========================================================================
+
+
+// ==========================================================================
+// Global Network Styles
+// ==========================================================================
+
+.network-nav{
+	
+	margin-top: -10px;
+	margin-bottom: 0px;
+
+	.network-nav-item{
+		text-align: center;
+		height: 65px;
+		color: $grey;
+		text-transform: uppercase;
+		font-size: em(12);
+		font-weight: bold;
+		padding: 24px 10px 24px 10px;
+		font-family: $font-family--heavy;
+		border-right: 4px solid $grey;
+
+		&:nth-child(3){
+			border-right: none;
+			img{position: relative; vertical-align: top; top: -12px;}
+		}
+	}
+ 
+}
+
+.network-filter-status{
+	width: 100%; 
+	height: 40px;
+	padding: 15px 20px 10px 20px;
+	border-top: 4px solid $grey;
+	font-family: $font-family--bold;
+	font-size: em(11);
+	letter-spacing: em(1);
+
+	.filter-title, .filter-reset{
+		color: $yellow-primary; 
+	}
+
+	.filter-reset{
+		text-align: right;
+		text-transform: uppercase;
+		img{position: relative; vertical-align: top; top: -3px;}
+	}
+}
+
+
+.network-filter-topics{
+	width: 100%; 
+	border-top: 4px solid $grey;
+	margin-bottom: 0px;
+	
+	.topic-list{
+		padding: 20px 20px 30px 20px;
+		border-right: 4px solid $grey;
+	
+		span.filter-by{
+			font-size: em(11);
+			letter-spacing: em(1);
+			text-transform: uppercase;
+		}
+
+		li{
+			display: block;
+			font-size: em(15);
+			color: $yellow-primary;
+			font-family: $font-family--heavy;
+			text-transform: uppercase;
+			padding: 8px 0px 0px 0px;
+			letter-spacing: em(1);
+		}
+		li:hover{
+ 
+			color: $grey;
+			text-decoration: underline; font-weight:bold;
+			cursor: pointer; 
+		}
+
+
+
+	}
+	.topic-items{
+		
+		padding: 45px 20px 10px 20px;
+		-webkit-column-count: 4; /* Chrome, Safari, Opera */
+	    -moz-column-count: 4; /* Firefox */
+	    column-count: 4;
+		
+	}
+
+	input[type=checkbox] {
+		visibility: hidden;
+		display: inline;
+		float: left;
+	}
+	.topic-checkbox {
+		width: 15px;
+		height: 15px;
+		background: white;
+		border: 1px solid $grey;
+		margin: 0px 0px 10px 0px ;
+		position: relative;
+		display: block;
+		clear: both;
+	}
+
+	.topic-checkbox label {
+		font-size: em(15);
+		line-height: 1.4;
+		cursor: pointer;
+		display: block;
+	 	width: 180px;
+		left: 6px;
+	    top: -3px;
+	    position: relative;
+
+	     
+	}
+
+	.topic-checkbox label:after {
+	 
+		opacity: 0;
+		content: '';
+		position: absolute;
+		width: 13px;
+		height: 13px;
+		background: #ffcc00;
+		top: 3px;
+		left: -6px;
+	 
+	}
+
+	.topic-checkbox label:hover::after {
+		filter: alpha(opacity=70);
+		opacity: 0.7;
+	 
+	}
+
+	.topic-checkbox input[type=checkbox]:checked + label:after {
+	 
+		filter: alpha(opacity=100);
+		opacity: 1;
+	}
+
+
+
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+.network-grid .columns{
+	line-height: 0
+}
+
+.network-grid-item{
+ 	line-height: 0;
+ 	text-align: center; 
+  
+ 
+    img{
+    	height:auto;
+    	margin: 0;
+    	border: 0px;
+    }
+    &:hover img{
+ 		
+ 	}	
+
+ 
+	.hover-info{ 
+		display: block;
+	    position: absolute;
+	 	margin: 0;
+	 	padding: 0;
+	    top: 0;
+	    left:0;
+	    color: white;
+	    height: auto;
+	   	top: 50%;
+	    left: 50%;
+	    height: 0;
+	    transform: translate(-50%,-50%);
+	    -ms-transform: translate(-50%,-50%); /* IE 9 */
+	    -webkit-transform: translate(-50%,-50%); /* Safari and Chrome */
+
+	 	span.name{
+	 	 	display: block;
+	 		line-height: 1.5;
+	 		font-family: $font-family--bold;
+	 		font-size: em(20);
+	 	}
+
+	 	span.title{
+ 			display: block;
+	 		font-family:$font-family--italic;
+	 		font-size: em(15);
+	 		line-height: 1.5;
+	 	}
+
+	 	span.location{
+	 	 	display: block;
+	 		font-size: em(12);
+	 		line-height: 1.5;
+ 		}
+ 	}
+ 	&:hover .hover-info{
+		display: block;
+ 	}
+
+
+ 	&:hover:before{
+	    content:'';
+	    top: 0;
+	    left: 0;
+	    z-index: 10;
+	    width: 100%;
+	    height: 100%;
+	    display: block;
+	    position: absolute;
+	    background: $yellow-primary;
+	    opacity: 0.6;
+ 	}
+ 
+
+}
+
+
+
+
+
