--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   margin: 0;
 }
 
-/* line 26, sass/base/_normalize.scss */
+/* line 37, sass/base/_normalize.scss */
 article,
 aside,
 details,
@@ -47,7 +47,7 @@ summary {
   display: block;
 }
 
-/* line 45, sass/base/_normalize.scss */
+/* line 48, sass/base/_normalize.scss */
 audio,
 canvas,
 progress,
@@ -62,7 +62,7 @@ audio:not([controls]) {
   height: 0;
 }
 
-/* line 66, sass/base/_normalize.scss */
+/* line 67, sass/base/_normalize.scss */
 [hidden],
 template {
   display: none;
@@ -73,7 +73,7 @@ a {
   background: transparent;
 }
 
-/* line 82, sass/base/_normalize.scss */
+/* line 83, sass/base/_normalize.scss */
 a:active,
 a:hover {
   outline: 0;
@@ -84,7 +84,7 @@ abbr[title] {
   border-bottom: 1px dotted;
 }
 
-/* line 98, sass/base/_normalize.scss */
+/* line 99, sass/base/_normalize.scss */
 b,
 strong {
   font-weight: bold;
@@ -112,7 +112,7 @@ small {
   font-size: 80%;
 }
 
-/* line 137, sass/base/_normalize.scss */
+/* line 138, sass/base/_normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -158,7 +158,7 @@ pre {
   overflow: auto;
 }
 
-/* line 195, sass/base/_normalize.scss */
+/* line 198, sass/base/_normalize.scss */
 code,
 kbd,
 pre,
@@ -167,7 +167,7 @@ samp {
   font-size: 1em;
 }
 
-/* line 214, sass/base/_normalize.scss */
+/* line 218, sass/base/_normalize.scss */
 button,
 input,
 optgroup,
@@ -183,13 +183,13 @@ button {
   overflow: visible;
 }
 
-/* line 237, sass/base/_normalize.scss */
+/* line 238, sass/base/_normalize.scss */
 button,
 select {
   text-transform: none;
 }
 
-/* line 249, sass/base/_normalize.scss */
+/* line 252, sass/base/_normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -198,13 +198,13 @@ input[type="submit"] {
   cursor: pointer;
 }
 
-/* line 260, sass/base/_normalize.scss */
+/* line 261, sass/base/_normalize.scss */
 button[disabled],
 html input[disabled] {
   cursor: default;
 }
 
-/* line 268, sass/base/_normalize.scss */
+/* line 269, sass/base/_normalize.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -216,7 +216,7 @@ input {
   line-height: normal;
 }
 
-/* line 284, sass/base/_normalize.scss */
+/* line 290, sass/base/_normalize.scss */
 *
 input[type="checkbox"],
 input[type="radio"] {
@@ -224,7 +224,7 @@ input[type="radio"] {
   padding: 0;
 }
 
-/* line 300, sass/base/_normalize.scss */
+/* line 301, sass/base/_normalize.scss */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   height: auto;
@@ -238,7 +238,7 @@ input[type="search"] {
   box-sizing: content-box;
 }
 
-/* line 322, sass/base/_normalize.scss */
+/* line 323, sass/base/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -273,7 +273,7 @@ table {
   border-spacing: 0;
 }
 
-/* line 369, sass/base/_normalize.scss */
+/* line 370, sass/base/_normalize.scss */
 td,
 th {
   padding: 0;
@@ -287,7 +287,7 @@ th {
 
 /* line 10, sass/base/_base.scss */
 body {
-  color: #404040;
+  color: #616161;
   font-size: 16;
   font-family: "Avenir Next Cyr W00 Regular", Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -383,7 +383,7 @@ img {
   height: auto;
 }
 
-/* line 103, sass/base/_base.scss */
+/* line 104, sass/base/_base.scss */
 ul,
 li {
   margin: 0;
@@ -391,7 +391,7 @@ li {
   list-style-type: none;
 }
 
-/* line 112, sass/base/_base.scss */
+/* line 113, sass/base/_base.scss */
 input,
 textarea {
   display: block;
@@ -401,7 +401,7 @@ textarea {
   border: 0;
 }
 
-/* line 121, sass/base/_base.scss */
+/* line 122, sass/base/_base.scss */
 input:focus,
 textarea:focus {
   transition: 1;
@@ -492,7 +492,7 @@ footer {
   left: -999em;
   top: 0;
 }
-/* line 42, sass/layout/_footer.scss */
+/* line 43, sass/layout/_footer.scss */
 .footer-social ul ul li:hover > ul, .footer-social ul ul li.focus > ul {
   left: 100%;
 }
@@ -500,7 +500,7 @@ footer {
 .footer-social ul ul a {
   width: 200px;
 }
-/* line 61, sass/layout/_footer.scss */
+/* line 62, sass/layout/_footer.scss */
 .footer-social ul li:hover > ul,
 .footer-social ul li.focus > ul {
   left: auto;
@@ -2503,7 +2503,7 @@ header {
   left: -999em;
   top: 0;
 }
-/* line 30, sass/modules/_menus.scss */
+/* line 31, sass/modules/_menus.scss */
 .banner-navigation ul ul li:hover > ul, .banner-navigation ul ul li.focus > ul {
   left: 100%;
 }
@@ -2511,7 +2511,7 @@ header {
 .banner-navigation ul ul a {
   width: 200px;
 }
-/* line 49, sass/modules/_menus.scss */
+/* line 50, sass/modules/_menus.scss */
 .banner-navigation ul li:hover > ul,
 .banner-navigation ul li.focus > ul {
   left: auto;
@@ -2541,7 +2541,7 @@ header {
 }
 
 /* Small menu. */
-/* line 87, sass/modules/_menus.scss */
+/* line 88, sass/modules/_menus.scss */
 .menu-toggle,
 .banner-navigation.toggled ul {
   display: block;
@@ -2604,7 +2604,7 @@ header {
   left: -999em;
   top: 0;
 }
-/* line 147, sass/modules/_menus.scss */
+/* line 148, sass/modules/_menus.scss */
 .main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
   left: 100%;
 }
@@ -2612,7 +2612,7 @@ header {
 .main-navigation ul ul a {
   width: 200px;
 }
-/* line 166, sass/modules/_menus.scss */
+/* line 167, sass/modules/_menus.scss */
 .main-navigation ul li:hover > ul,
 .main-navigation ul li.focus > ul {
   left: auto;
@@ -2652,7 +2652,7 @@ header {
 }
 
 /* Small menu. */
-/* line 220, sass/modules/_menus.scss */
+/* line 221, sass/modules/_menus.scss */
 .menu-toggle,
 .main-navigation.toggled ul {
   display: block;
@@ -2722,7 +2722,7 @@ header {
 }
 /* line 282, sass/modules/_menus.scss */
 .side-menu a {
-  color: #404040;
+  color: #616161;
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 15px;
   line-height: 30px;
@@ -2751,6 +2751,226 @@ header {
   float: left;
   position: relative;
   padding: 0 10px;
+}
+
+/* line 10, sass/modules/_modules.scss */
+.network-nav {
+  margin-top: -10px;
+  margin-bottom: 0px;
+}
+/* line 15, sass/modules/_modules.scss */
+.network-nav .network-nav-item {
+  text-align: center;
+  height: 65px;
+  color: #616161;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  font-weight: bold;
+  padding: 24px 10px 24px 10px;
+  font-family: "Avenir Next Cyr W00 Heavy";
+  border-right: 4px solid #616161;
+}
+/* line 26, sass/modules/_modules.scss */
+.network-nav .network-nav-item:nth-child(3) {
+  border-right: none;
+}
+/* line 28, sass/modules/_modules.scss */
+.network-nav .network-nav-item:nth-child(3) img {
+  position: relative;
+  vertical-align: top;
+  top: -12px;
+}
+
+/* line 34, sass/modules/_modules.scss */
+.network-filter-status {
+  width: 100%;
+  height: 40px;
+  padding: 15px 20px 10px 20px;
+  border-top: 4px solid #616161;
+  font-family: "Avenir Next Cyr W00 Bold";
+  font-size: 0.6875em;
+  letter-spacing: 0.0625em;
+}
+/* line 43, sass/modules/_modules.scss */
+.network-filter-status .filter-title, .network-filter-status .filter-reset {
+  color: #fec935;
+}
+/* line 47, sass/modules/_modules.scss */
+.network-filter-status .filter-reset {
+  text-align: right;
+  text-transform: uppercase;
+}
+/* line 50, sass/modules/_modules.scss */
+.network-filter-status .filter-reset img {
+  position: relative;
+  vertical-align: top;
+  top: -3px;
+}
+
+/* line 55, sass/modules/_modules.scss */
+.network-filter-topics {
+  width: 100%;
+  border-top: 4px solid #616161;
+  margin-bottom: 0px;
+}
+/* line 60, sass/modules/_modules.scss */
+.network-filter-topics .topic-list {
+  padding: 20px 20px 30px 20px;
+  border-right: 4px solid #616161;
+}
+/* line 64, sass/modules/_modules.scss */
+.network-filter-topics .topic-list span.filter-by {
+  font-size: 0.6875em;
+  letter-spacing: 0.0625em;
+  text-transform: uppercase;
+}
+/* line 70, sass/modules/_modules.scss */
+.network-filter-topics .topic-list li {
+  display: block;
+  font-size: 0.9375em;
+  color: #fec935;
+  font-family: "Avenir Next Cyr W00 Heavy";
+  text-transform: uppercase;
+  padding: 8px 0px 0px 0px;
+  letter-spacing: 0.0625em;
+}
+/* line 79, sass/modules/_modules.scss */
+.network-filter-topics .topic-list li:hover {
+  color: #616161;
+  text-decoration: underline;
+  font-weight: bold;
+  cursor: pointer;
+}
+/* line 89, sass/modules/_modules.scss */
+.network-filter-topics .topic-items {
+  padding: 45px 20px 10px 20px;
+  -webkit-column-count: 4;
+  /* Chrome, Safari, Opera */
+  -moz-column-count: 4;
+  /* Firefox */
+  column-count: 4;
+}
+/* line 98, sass/modules/_modules.scss */
+.network-filter-topics input[type=checkbox] {
+  visibility: hidden;
+  display: inline;
+  float: left;
+}
+/* line 103, sass/modules/_modules.scss */
+.network-filter-topics .topic-checkbox {
+  width: 15px;
+  height: 15px;
+  background: white;
+  border: 1px solid #616161;
+  margin: 0px 0px 10px 0px;
+  position: relative;
+  display: block;
+  clear: both;
+}
+/* line 114, sass/modules/_modules.scss */
+.network-filter-topics .topic-checkbox label {
+  font-size: 0.9375em;
+  line-height: 1.4;
+  cursor: pointer;
+  display: block;
+  width: 180px;
+  left: 6px;
+  top: -3px;
+  position: relative;
+}
+/* line 127, sass/modules/_modules.scss */
+.network-filter-topics .topic-checkbox label:after {
+  opacity: 0;
+  content: '';
+  position: absolute;
+  width: 13px;
+  height: 13px;
+  background: #ffcc00;
+  top: 3px;
+  left: -6px;
+}
+/* line 140, sass/modules/_modules.scss */
+.network-filter-topics .topic-checkbox label:hover::after {
+  filter: alpha(opacity=70);
+  opacity: 0.7;
+}
+/* line 146, sass/modules/_modules.scss */
+.network-filter-topics .topic-checkbox input[type=checkbox]:checked + label:after {
+  filter: alpha(opacity=100);
+  opacity: 1;
+}
+
+/* line 169, sass/modules/_modules.scss */
+.network-grid .columns {
+  line-height: 0;
+}
+
+/* line 173, sass/modules/_modules.scss */
+.network-grid-item {
+  line-height: 0;
+  text-align: center;
+}
+/* line 178, sass/modules/_modules.scss */
+.network-grid-item img {
+  height: auto;
+  margin: 0;
+  border: 0px;
+}
+/* line 188, sass/modules/_modules.scss */
+.network-grid-item .hover-info {
+  display: block;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  color: white;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  height: 0;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  /* IE 9 */
+  -webkit-transform: translate(-50%, -50%);
+  /* Safari and Chrome */
+}
+/* line 204, sass/modules/_modules.scss */
+.network-grid-item .hover-info span.name {
+  display: block;
+  line-height: 1.5;
+  font-family: "Avenir Next Cyr W00 Bold";
+  font-size: 1.25em;
+}
+/* line 211, sass/modules/_modules.scss */
+.network-grid-item .hover-info span.title {
+  display: block;
+  font-family: "Avenir Next Cyr W00 Italic";
+  font-size: 0.9375em;
+  line-height: 1.5;
+}
+/* line 218, sass/modules/_modules.scss */
+.network-grid-item .hover-info span.location {
+  display: block;
+  font-size: 0.75em;
+  line-height: 1.5;
+}
+/* line 224, sass/modules/_modules.scss */
+.network-grid-item:hover .hover-info {
+  display: block;
+}
+/* line 229, sass/modules/_modules.scss */
+.network-grid-item:hover:before {
+  content: '';
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  background: #fec935;
+  opacity: 0.6;
 }
 
 /* line 1, sass/modules/_input.scss */
@@ -2861,7 +3081,7 @@ header {
   position: absolute;
 }
 
-/* line 97, sass/modules/_input.scss */
+/* line 98, sass/modules/_input.scss */
 .input__label--hoshi::before,
 .input__label--hoshi::after {
   content: '';
@@ -2883,14 +3103,14 @@ header {
   transition: transform 0.3s;
 }
 
-/* line 119, sass/modules/_input.scss */
+/* line 120, sass/modules/_input.scss */
 .input__field--hoshi:focus + .input__label--hoshi::after,
 .input--filled .input__label--hoshi::after {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 125, sass/modules/_input.scss */
+/* line 126, sass/modules/_input.scss */
 .input__field--hoshi:focus + .input__label--hoshi .input__label-content--hoshi,
 .input--filled .input__label-content--hoshi {
   -webkit-animation: anim-1 0.3s forwards;
@@ -2898,39 +3118,51 @@ header {
 }
 
 @-webkit-keyframes anim-1 {
+  /* line 132, sass/modules/_input.scss */
   50% {
     opacity: 0;
     -webkit-transform: translate3d(1em, 0, 0);
     transform: translate3d(1em, 0, 0);
   }
+
+  /* line 137, sass/modules/_input.scss */
   51% {
     opacity: 0;
     -webkit-transform: translate3d(-1em, -40%, 0);
     transform: translate3d(-1em, -40%, 0);
   }
+
+  /* line 142, sass/modules/_input.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate3d(0, -40%, 0);
     transform: translate3d(0, -40%, 0);
   }
 }
+
 @keyframes anim-1 {
+  /* line 150, sass/modules/_input.scss */
   50% {
     opacity: 0;
     -webkit-transform: translate3d(1em, 0, 0);
     transform: translate3d(1em, 0, 0);
   }
+
+  /* line 155, sass/modules/_input.scss */
   51% {
     opacity: 0;
     -webkit-transform: translate3d(-1em, -40%, 0);
     transform: translate3d(-1em, -40%, 0);
   }
+
+  /* line 160, sass/modules/_input.scss */
   100% {
     opacity: 1;
     -webkit-transform: translate3d(0, -40%, 0);
     transform: translate3d(0, -40%, 0);
   }
 }
+
 /* BASE GRID
  * ------------------------------------------------ */
 /* line 3, sass/grid/_grid.scss */
@@ -2940,7 +3172,7 @@ header {
   margin: 0 auto;
   padding: 0;
 }
-/* line 8, sass/grid/_grid.scss */
+/* line 9, sass/grid/_grid.scss */
 .container .column,
 .container .columns {
   float: left;
@@ -2964,7 +3196,7 @@ header {
 }
 
 /* Overrides */
-/* line 24, sass/grid/_dependencies.scss */
+/* line 25, sass/grid/_dependencies.scss */
 .container .one.column,
 .container .one.columns {
   width: 8.33333%;
