--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -12,6 +12,7 @@
 	margin-top: -10px;
 	margin-bottom: 0px;
 
+
 	.network-nav-item{
 		text-align: center;
 		height: 65px;
@@ -36,6 +37,7 @@
 }
 
 .network-filter-status{
+	display:none;
 	width: 100%; 
 	height: 40px;
 	padding: 15px 20px 10px 20px;
@@ -57,9 +59,26 @@
 
 
 .network-filter-topics{
+	display: none;
 	width: 100%; 
 	border-top: 4px solid $grey;
 	margin-bottom: 0px;
+
+	&:after{ //FOR TRIANGLE
+		bottom: 100%;
+		left: 16.566667%;
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+		border-left: 30px solid transparent;
+		border-right: 30px solid transparent;
+		border-top: 20px solid $grey;
+		margin-left: -30px;
+		top: 0px;
+	}
 	
 	.topic-list{
 		padding: 20px 20px 30px 20px;
@@ -152,23 +171,78 @@
 		filter: alpha(opacity=100);
 		opacity: 1;
 	}
+ 
+}
 
+.network-search{
+	display:none;
+	border-top: 4px solid $grey;
+	 
+ 
+	&:after{ //FOR TRIANGLE
+		bottom: 100%;
+		left: 50%;
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+		border-left: 30px solid transparent;
+		border-right: 30px solid transparent;
+		border-top: 20px solid $grey;
+		margin-left: -30px;
+		top: 0px;
+	}
+ 
 
+	 
+
+	.tempsearch{
+		height: 4px;
+		width: 90%;
+		background: $yellow-primary;
+		margin-top: 140px;
+	}
+}
+
+.filter-title{
+	padding: 40px; 
+	h3{
+		color: $yellow-primary;
+		font-size: 24px;
+		line-height: 1.2;
+	}
+}
+
+.network-map{
+	display: none;
+	border-top: 4px solid $grey;
+	&:after{ //FOR TRIANGLE
+		bottom: 100%;
+		left: 83.33333%;
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+		border-left: 30px solid transparent;
+		border-right: 30px solid transparent;
+		border-top: 20px solid $grey;
+		margin-left: -30px;
+		top: 0px;
+	}
+ 
+	.map-embed{
+		padding: 40px 40px 40px 0px; 
+		img{
+			width: 100%;
+		}
+	}
 
 }
  
-
-
-
-
-
-
-
-
-
-
-
-
 
 .network-grid .columns{
 	line-height: 0
@@ -176,7 +250,14 @@
 
 .network-grid-item{
  	line-height: 0;
+ 	width: 100%;
+ 	background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 0;
  	text-align: center; 
+ 	padding-top: 100%;
+ 	
   
  
     img{
@@ -184,8 +265,9 @@
     	margin: 0;
     	border: 0px;
     }
-    &:hover img{
- 		
+    &:hover{
+    	background-color: $yellow-primary;
+ 		background-blend-mode: multiply;
  	}	
 
  
@@ -198,7 +280,7 @@
 	    left:0;
 	    color: white;
 	    height: auto;
-	   	top: 50%;
+	   	top: 40%;
 	    left: 50%;
 	    height: 0;
 	    transform: translate(-50%,-50%);
@@ -229,22 +311,14 @@
 		display: block;
  	}
 
-
- 	&:hover:before{
-	    content:'';
-	    top: 0;
-	    left: 0;
-	    z-index: 10;
-	    width: 100%;
-	    height: 100%;
-	    display: block;
-	    position: absolute;
-	    background: $yellow-primary;
-	    opacity: 0.6;
- 	}
  
 
 }
+
+
+
+
+
 
 .load-more{
 	margin-top: 20px;
