--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -8,7 +8,7 @@
 // ==========================================================================
 
 .network-nav{
-	
+
 	margin-top: -10px;
 	margin-bottom: 0px;
 
@@ -33,12 +33,12 @@
 		opacity: 0.7;
 		cursor: pointer;
 	}
- 
+
 }
 
 .network-filter-status{
 	display:none;
-	width: 100%; 
+	width: 100%;
 	height: 40px;
 	padding: 15px 20px 10px 20px;
 	border-top: 4px solid $grey;
@@ -47,7 +47,7 @@
 	letter-spacing: em(1);
 
 	.filter-title, .filter-reset{
-		color: $yellow-primary; 
+		color: $yellow-primary;
 	}
 
 	.filter-reset{
@@ -60,7 +60,7 @@
 
 .network-filter-topics{
 	display: none;
-	width: 100%; 
+	width: 100%;
 	border-top: 4px solid $grey;
 	margin-bottom: 0px;
 
@@ -79,11 +79,11 @@
 		margin-left: -30px;
 		top: 0px;
 	}
-	
+
 	.topic-list{
 		padding: 20px 20px 30px 20px;
 		border-right: 4px solid $grey;
-	
+
 		span.filter-by{
 			font-size: em(11);
 			letter-spacing: em(1);
@@ -100,22 +100,22 @@
 			letter-spacing: em(1);
 		}
 		li:hover{
- 
+
 			color: $grey;
 			text-decoration: underline; font-weight:bold;
-			cursor: pointer; 
+			cursor: pointer;
 		}
 
 
 
 	}
 	.topic-items{
-		
+
 		padding: 45px 20px 10px 20px;
 		-webkit-column-count: 4; /* Chrome, Safari, Opera */
 	    -moz-column-count: 4; /* Firefox */
 	    column-count: 4;
-		
+
 	}
 
 	input[type=checkbox] {
@@ -144,11 +144,11 @@
 	    top: -3px;
 	    position: relative;
 
-	     
+
 	}
 
 	.topic-checkbox label:after {
-	 
+
 		opacity: 0;
 		content: '';
 		position: absolute;
@@ -157,28 +157,28 @@
 		background: #ffcc00;
 		top: 3px;
 		left: -6px;
-	 
+
 	}
 
 	.topic-checkbox label:hover::after {
 		filter: alpha(opacity=70);
 		opacity: 0.7;
-	 
+
 	}
 
 	.topic-checkbox input[type=checkbox]:checked + label:after {
-	 
+
 		filter: alpha(opacity=100);
 		opacity: 1;
 	}
- 
+
 }
 
 .network-search{
 	display:none;
 	border-top: 4px solid $grey;
-	 
- 
+
+
 	&:after{ //FOR TRIANGLE
 		bottom: 100%;
 		left: 50%;
@@ -194,9 +194,9 @@
 		margin-left: -30px;
 		top: 0px;
 	}
- 
 
-	 
+
+
 
 	.tempsearch{
 		height: 4px;
@@ -207,16 +207,11 @@
 }
 
 .filter-title{
-	padding: 40px; 
-	h3{
-		color: $yellow-primary;
-		font-size: 24px;
-		line-height: 1.2;
-	}
+	padding: 40px;
 }
 
 .network-map{
-	display: none;
+
 	border-top: 4px solid $grey;
 	&:after{ //FOR TRIANGLE
 		bottom: 100%;
@@ -233,16 +228,11 @@
 		margin-left: -30px;
 		top: 0px;
 	}
- 
-	.map-embed{
-		padding: 40px 40px 40px 0px; 
-		img{
-			width: 100%;
-		}
-	}
+
+
 
 }
- 
+
 
 .network-grid .columns{
 	line-height: 0
@@ -255,11 +245,11 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 0;
- 	text-align: center; 
+ 	text-align: center;
  	padding-top: 100%;
- 	
-  
- 
+
+
+
     img{
     	height:auto;
     	margin: 0;
@@ -268,10 +258,10 @@
     &:hover{
     	background-color: $yellow-primary;
  		background-blend-mode: multiply;
- 	}	
+ 	}
 
- 
-	.hover-info{ 
+
+	.hover-info{
 		display: none;
 	    position: absolute;
 	 	margin: 0;
@@ -311,7 +301,7 @@
 		display: block;
  	}
 
- 
+
 
 }
 
@@ -340,7 +330,36 @@
 
 }
 
+// Search
 
+.search {
+	display: block;
+	margin: 50px;
 
+	.input {
+		max-width: 100%;
+		width: 100%;
+	}
+}
 
+// Map
 
+#map-container {
+  padding: 6px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #ccc #ccc #999 #ccc;
+  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+  width: 100%;
+}
+#map {
+  width: 100%;
+  height: 400px;
+}
+
+.map-embed{
+	padding: 50px;
+
+}
