--- a/style.css
+++ b/style.css
@@ -3708,19 +3708,12 @@ header {
 .filter-title {
   padding: 40px;
 }
-/* line 211, sass/modules/_modules.scss */
-.filter-title h3 {
-  color: #fec935;
-  font-size: 24px;
-  line-height: 1.2;
-}
 
-/* line 218, sass/modules/_modules.scss */
+/* line 213, sass/modules/_modules.scss */
 .network-map {
-  display: none;
   border-top: 4px solid #616161;
 }
-/* line 221, sass/modules/_modules.scss */
+/* line 216, sass/modules/_modules.scss */
 .network-map:after {
   bottom: 100%;
   left: 83.33333%;
@@ -3736,21 +3729,13 @@ header {
   margin-left: -30px;
   top: 0px;
 }
-/* line 237, sass/modules/_modules.scss */
-.network-map .map-embed {
-  padding: 40px 40px 40px 0px;
-}
-/* line 239, sass/modules/_modules.scss */
-.network-map .map-embed img {
-  width: 100%;
-}
 
-/* line 247, sass/modules/_modules.scss */
+/* line 237, sass/modules/_modules.scss */
 .network-grid .columns {
   line-height: 0;
 }
 
-/* line 251, sass/modules/_modules.scss */
+/* line 241, sass/modules/_modules.scss */
 .network-grid-item {
   line-height: 0;
   width: 100%;
@@ -3761,18 +3746,18 @@ header {
   text-align: center;
   padding-top: 100%;
 }
-/* line 263, sass/modules/_modules.scss */
+/* line 253, sass/modules/_modules.scss */
 .network-grid-item img {
   height: auto;
   margin: 0;
   border: 0px;
 }
-/* line 268, sass/modules/_modules.scss */
+/* line 258, sass/modules/_modules.scss */
 .network-grid-item:hover {
   background-color: #fec935;
   background-blend-mode: multiply;
 }
-/* line 274, sass/modules/_modules.scss */
+/* line 264, sass/modules/_modules.scss */
 .network-grid-item .hover-info {
   display: none;
   position: absolute;
@@ -3791,36 +3776,36 @@ header {
   -webkit-transform: translate(-50%, -50%);
   /* Safari and Chrome */
 }
-/* line 290, sass/modules/_modules.scss */
+/* line 280, sass/modules/_modules.scss */
 .network-grid-item .hover-info span.name {
   display: block;
   line-height: 1.5;
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 1.25em;
 }
-/* line 297, sass/modules/_modules.scss */
+/* line 287, sass/modules/_modules.scss */
 .network-grid-item .hover-info span.title {
   display: block;
   font-family: "Avenir Next Cyr W00 Italic";
   font-size: 0.9375em;
   line-height: 1.5;
 }
-/* line 304, sass/modules/_modules.scss */
+/* line 294, sass/modules/_modules.scss */
 .network-grid-item .hover-info span.location {
   display: block;
   font-size: 0.75em;
   line-height: 1.5;
 }
-/* line 310, sass/modules/_modules.scss */
+/* line 300, sass/modules/_modules.scss */
 .network-grid-item:hover .hover-info {
   display: block;
 }
 
-/* line 323, sass/modules/_modules.scss */
+/* line 313, sass/modules/_modules.scss */
 .load-more {
   margin-top: 20px;
 }
-/* line 325, sass/modules/_modules.scss */
+/* line 315, sass/modules/_modules.scss */
 .load-more .load-more-btn {
   background-color: #fec935;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -3830,10 +3815,44 @@ header {
   text-align: center;
   padding: 10px 0px 10px 0px;
 }
-/* line 334, sass/modules/_modules.scss */
+/* line 324, sass/modules/_modules.scss */
 .load-more .load-more-btn:hover {
   opacity: 0.7;
   cursor: pointer;
+}
+
+/* line 335, sass/modules/_modules.scss */
+.search {
+  display: block;
+  margin: 50px;
+}
+/* line 339, sass/modules/_modules.scss */
+.search .input {
+  max-width: 100%;
+  width: 100%;
+}
+
+/* line 347, sass/modules/_modules.scss */
+#map-container {
+  padding: 6px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #ccc #ccc #999 #ccc;
+  -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+  box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
+  width: 100%;
+}
+
+/* line 357, sass/modules/_modules.scss */
+#map {
+  width: 100%;
+  height: 400px;
+}
+
+/* line 362, sass/modules/_modules.scss */
+.map-embed {
+  padding: 50px;
 }
 
 /* line 1, sass/modules/_input.scss */
