--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -85,6 +85,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
       padding: 25px;
       border-bottom: 10px solid white;
       border-left: 10px solid white;
+      height: 280px;
 
       a {
         color: white;
@@ -381,6 +382,10 @@ section {
 .intro-text, .callout-text, .listing-text, .body-text-area, .icons-text, .buttons-text, .form-text {
   padding: 50px;
   float: left;
+}
+
+.listing-text {
+  height: 425px;
 }
 
 .email-signup-text {
