--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -316,3 +316,8 @@
 .utilities-nav li:hover, .banner-navigation li:hover {
 	opacity: 0.7;
 }
+
+.utilities-nav a:hover {
+	color: black;
+	opacity: 1;
+}
